k8s/nginx-new.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-new
spec:
  selector:
    matchLabels:
      app: nginx-new
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx-new
    spec:
      containers:
      - name: nginx
        image: replace_image
        ports:
        - containerPort: 80
