k8s/nginx-global-service.yml


kind: Service
apiVersion: v1
metadata:
  name: nginx-global
spec:
  selector:
    app: nginx-global
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
