k8s/nginx-in-service.yml


kind: Service
apiVersion: v1
metadata:
  name: nginx-in
spec:
  selector:
    app: nginx-in
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
