k8s/nginx-old-service.yml


kind: Service
apiVersion: v1
metadata:
  name: nginx-old
spec:
  selector:
    app: nginx-old
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
