k8s/nginx-sg-service.yml


kind: Service
apiVersion: v1
metadata:
  name: nginx-sg
spec:
  selector:
    app: nginx-sg
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
