k8s/nginx-us-service.yml


kind: Service
apiVersion: v1
metadata:
  name: nginx-us
spec:
  selector:
    app: nginx-us
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
