k8s/ingress_gcp.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
spec:
  ingressClassName: nginx-public
  rules:
  - host: "*.bstkinternal.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-global
            port:
              number: 80
