k8s/ingress_gcp_in.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-in
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: cloudfront-viewer-country
    nginx.ingress.kubernetes.io/canary-by-header-value: IN
spec:
  ingressClassName: nginx-public
  rules:
  - host: "*.bstkinternal.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-in
            port:
              number: 80
